refactor: Collectors.toList()를 Stream API의 toList()로 변경하여 코드 간결화